complate style css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   </head>
   <body>
     <!-- container -->
-    <div class="container"></div>
+    <div class="container">
+        <div class="wrapper">
+            <input type="search"  id="SearchInput" placeholder="Search Text..." autocomplete="off">
+            <button onclick="search()">Search</button>
+        </div>
+        <p id="paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, doloremque veniam. Maiores quos dolorum, earum animi beatae fuga mollitia quasi Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime odio iste, consequatur laborum accusamus reiciendis recusandae mollitia dicta nisi aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae dolor deserunt sapiente voluptate temporibus iusto libero ratione minus nisi fuga.
+        </p>
+    </div>
     <!-- js File -->
     <script src="src/scripts.js"></script>
   </body>
