--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- container -->
     <div class="container">
         <div class="wrapper">
-            <input type="search"  id="SearchInput" placeholder="Search Text..." autocomplete="off">
+            <input type="search"  id="SearchInput" placeholder="Search Text..." autocomplete="off" autofocus>
             <button onclick="search()">Search</button>
         </div>
         <p id="paragraph">
