update and add readme file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button onclick="search()">Search</button>
         </div>
         <p id="paragraph">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, doloremque veniam. Maiores quos dolorum, earum animi beatae fuga mollitia quasi Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime odio iste, consequatur laborum accusamus reiciendis recusandae mollitia dicta nisi aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae dolor deserunt sapiente voluptate temporibus iusto libero ratione minus nisi fuga.
+            Lorem ipsum dolor sit amet test consectetur adipisicing elit. Quas, doloremque veniam. Maiores quos dolorum, earum animi beatae fuga mollitia quasi Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime odio iste, consequatur laborum accusamus reiciendis recusandae mollitia dicta nisi aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae dolor deserunt sapiente voluptate temporibus iusto libero ratione minus nisi fuga.
         </p>
     </div>
     <!-- js File -->
